[fix] Fixed overlapping controls in Estimate Effort view (8m)

--- a/app/assets/stylesheets/houston-scheduler/edit_estimates.scss
+++ b/app/assets/stylesheets/houston-scheduler/edit_estimates.scss
@@ -22,7 +22,8 @@
     > td {
       position: relative;
       
-      &.ticket-effort { min-width: 17em; }
+      &.ticket-effort { padding-right: 2px; }
+      &.ticket-unable-to-estimate { padding-left: 2px; }
       &.ticket-summary { width: 72%; overflow: hidden; text-overflow: ellipsis; }
     }
   }
@@ -44,20 +45,13 @@
       text-align: right;
       font-size: 1.08em;
       padding: .33em .75em;
-      position: absolute;
-      left: .33em;
-      top: .166em;
-      bottom: .166em;
-      right: 136px;
-      width: auto;
+      width: 5em;
       margin: 0;
     }
     
     button {
-      position: absolute;
-      top: .166em;
-      right: .5em;
       font-size: 14px;
+      white-space: nowrap;
       
       &.active {
         background-color: #d6d6d6;
